Spreadsheet does not update during/after playing animation #110164

Closed
opened 2023-07-16 10:45:09 +02:00 by Martijn Versteegh · 9 comments

System Information

Operating system: Linux-5.15.0-76-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.125.06

Blender Version
Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: c7fc78b81ecb
Worked: (newest version of Blender that worked as expected)

Short description of error
When pressing play on the timeline the values in the spreadsheet are not updated except when the mouse enters/leaves the area.
Using the arrow keys to go one frame forward/backward does update the spreadsheet.

Exact steps for others to reproduce the error

  • Open the attached .blend ( create a GN tree changing some attribute in your scene)
  • Press Play. Observe the spreadsheet is not updated

Moving the mouse over the spreadsheet, or back out again makes it update
Pressing the left/right arrow makes it update as well.

I can understand the spreadsheet not updating during playback for performance reasons, maybe. But as soon as you press pause I'd expect it to update.

> **System Information** Operating system: Linux-5.15.0-76-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.125.06 **Blender Version** Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: `c7fc78b81ecb` Worked: (newest version of Blender that worked as expected) **Short description of error** When pressing play on the timeline the values in the spreadsheet are not updated except when the mouse enters/leaves the area. Using the arrow keys to go one frame forward/backward *does* update the spreadsheet. **Exact steps for others to reproduce the error** - Open the attached .blend ( create a GN tree changing some attribute in your scene) - Press Play. Observe the spreadsheet is not updated Moving the mouse over the spreadsheet, or back out again makes it update Pressing the left/right arrow makes it update as well. I can understand the spreadsheet not updating during playback for performance reasons, maybe. But as soon as you press pause I'd expect it to update.
Martijn Versteegh added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-16 10:45:09 +02:00
Collaborator

Hi! Make sure you have "Spreadsheet" option selected in timeline playback options. This option is added for performance reasons. Enabling the option did solve the issue.

图片

Will close the report since this is not a bug with blender. But I think we need to better clarify this in the manual or somehow hint it on the UI.

Hi! Make sure you have "Spreadsheet" option selected in timeline playback options. This option is added for performance reasons. Enabling the option did solve the issue. ![图片](/attachments/f550f604-b12e-4ba4-be2a-1fa0f7457913) Will close the report since this is not a bug with blender. But I think we need to better clarify this in the manual or somehow hint it on the UI.
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2023-07-16 11:11:12 +02:00
Poster
Collaborator

I'd still expect it to update after you've pressed the pause button.

As it is it now shows stale data when the animation is no longer playing. Which doesn't happen anywhere else in blender I think, And also is very confusing.

I'd still expect it to update after you've pressed the pause button. As it is it now shows stale data when the animation is no longer playing. Which doesn't happen anywhere else in blender I think, And also is very confusing.
Collaborator

As it is it now shows stale data when the animation is no longer playing. Which doesn't happen anywhere else in blender I think, And also is very confusing.

You mean it's showing data from the previous frame when pause button is pressed, even when you enabled that option?

> As it is it now shows stale data when the animation is no longer playing. Which doesn't happen anywhere else in blender I think, And also is very confusing. You mean it's showing data from the previous frame when pause button is pressed, even when you enabled that option?
Poster
Collaborator

No, when I enable that option everything works.
what does not work, and is somewhat unexpected imho is:

  • press play
  • press pause

Spreadsheet shows info from before you pressed play. As soon as you move the mouse into or out of the spreadsheet area it updates to the info of the current frame.

I'd expect the spreadsheet (even without that option) to be updated once when the pause button is pressed. Other areas of blender which don't get updated during playing work the same. They get updated as soon as you pause/stop the playing.

No, when I enable that option everything works. what does not work, and is somewhat unexpected imho is: - press play - press pause Spreadsheet shows info from before you pressed play. As soon as you move the mouse into or out of the spreadsheet area it updates to the info of the current frame. I'd expect the spreadsheet (even without that option) to be updated once when the pause button is pressed. Other areas of blender which don't get updated during playing work the same. They get updated as soon as you pause/stop the playing.
Poster
Collaborator

I'll try to create a patch+PR myself ;-)

I'll try to create a patch+PR myself ;-)

@lichtwerk fixed/added this option: #108002

Guess further fix is to redraw/refresh the spreadsheet area when play animation is toggled?

@lichtwerk fixed/added this option: https://projects.blender.org/blender/blender/pulls/108002 Guess further fix is to redraw/refresh the spreadsheet area when `play animation` is toggled?

@lichtwerk fixed/added this option: #108002

Guess further fix is to redraw/refresh the spreadsheet area when play animation is toggled?

Could be that the missing update also came with d8388ef36a ?

> @lichtwerk fixed/added this option: https://projects.blender.org/blender/blender/pulls/108002 > > Guess further fix is to redraw/refresh the spreadsheet area when `play animation` is toggled? Could be that the missing update also came with d8388ef36a1daaf72c10ebbcb4538c99d74c6bd0 ?
Collaborator

Could be that the missing update also came with d8388ef36a ?

This does make sense... I would prefer it to update on pause, but adding yet another option for this seems to be overkill...

> Could be that the missing update also came with d8388ef36a ? This does make sense... I would prefer it to update on pause, but adding yet another option for this seems to be overkill...
Poster
Collaborator

Probably that causes it. But I'd think a redraw of the spreadsheet area could be triggered without a new depsgraph evaluation. As seems to be implied for that patch, though I guess that patch forgot to trigger the spreadsheet area as well.I'll see if I cna find the time to find out how this works. My guess would be just triggering a redraw of the spreadsheet area should be enough, but I don't know much (yet) about the gui code.

Probably that causes it. But I'd think a redraw of the spreadsheet area could be triggered without a new depsgraph evaluation. As seems to be implied for that patch, though I guess that patch forgot to trigger the spreadsheet area as well.I'll see if I cna find the time to find out how this works. My guess would be just triggering a redraw of the spreadsheet area should be enough, but I don't know much (yet) about the gui code.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110164
There is no content yet.