Fix #110164: Trigger spreadsheet redraw on animation pause

When playing and then pausing the animation the spreadsheet would show stale data,
not only during playback but also afterwards.

Pull Request: https://projects.blender.org/blender/blender/pulls/110224